/*
 * Copyright (C) 2022 FlamingoOS Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_package = "com.flamingo.clock.data.settings";
option java_multiple_files = true;

message Settings {
  ClockStyle clock_style = 1;
  bool show_seconds = 2;
  TimeFormat time_format = 3;
  string home_time_zone = 4;

  bool vibrate_for_timers = 5;
  string timer_sound_uri = 6;
  int32 timer_volume_rise_duration = 7;

  repeated string user_sound_uris = 8;
}

enum ClockStyle {
  ANALOG = 0;
  DIGITAL = 1;
}

enum TimeFormat {
  TWELVE_HOUR = 0;
  TWENTY_FOUR_HOUR = 1;
}